# Tubex

./: Cargo.toml  build.rs  rustfmt.toml
src/: config.rs  config_dialog.rs  download_manager.rs  events.rs  main.rs  options_dialog.rs  search_tab.rs  settings_tab.rs  startup.rs  video_info.rs
