[package]
name = "Tubex"
version = "0.1.0"
edition = "2024"

[dependencies]
wxdragon = "0.9.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1.0"
configparser = "3.1.0"
mimalloc = "0.1.48"
ureq = { version = "3.1.4", default-features = false, features = ["rustls"] }
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }
urlencoding = "2.1.3"

[build-dependencies]
embed-manifest = "1.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
